--- a/quickstart.html
+++ b/quickstart.html
@@ -1133,7 +1133,7 @@ http://localhost:8000</code></pre>
         <!-- CTA -->
         <section class="section text-center">
             <p class="cta-subtitle">
-                Accede al AEGIS Dashboard y realiza investigaciones profesionales
+                Accede al Aegis Dashboard y realiza investigaciones profesionales
             </p>
             <a href="index.html" class="btn-primary">Abrir Dashboard</a>
         </section>
@@ -1142,7 +1142,7 @@ http://localhost:8000</code></pre>
     <!-- Footer -->
     <footer class="footer">
         <p>
-            🛡️ AEGIS Dashboard v1.0 |
+            🛡️ Aegis Dashboard v1.0 |
             <span class="badge badge-primary">HTML5</span>
             <span class="badge badge-primary">CSS3</span>
             <span class="badge badge-primary">JavaScript</span>
