--- a/quickstart.html
+++ b/quickstart.html
@@ -691,7 +691,7 @@
                 </svg>
                 <div class="d-flex flex-column">
                     <h1 class="mb-0">Aegis Dashboard</h1>
-                    <small class="text-muted">Herramienta de Investigación</small>
+                    <small class="text-muted">Herramienta de Investigación</small> 
                 </div>
             </div>
             <div class="d-flex gap-2">
@@ -714,8 +714,9 @@
     <!-- Hero Section -->
     <div class="hero">
         <h1>🛡️ Aegis Dashboard</h1>
-        <p>Herramienta moderna de investigación integrada</p>
-        <a href="index.html" class="btn-primary">Ir a la Herramienta →</a>
+        <p>Centraliza 77+ recursos OSINT en un solo lugar, detecta automáticamente el tipo de búsqueda y ahorra tiempo valioso en tus investigaciones.</p>
+        <p style="margin-top: 1rem; font-size: 1.1rem; opacity: 0.9;">📖 Lee la guía de inicio rápido para las funcionalidades</p>
+        <a href="index.html" class="btn-primary" style="margin-top: 1.5rem;">Ir a la Herramienta →</a>
     </div>
 
     <!-- Main Content -->
