feat: add bilingual tooltips and update documentation (v1.2.0)
Features:
- Add informative tooltips to all OSINT tools
- Implement bilingual support (ES/EN) for tooltips
- Tooltips in all views: Tools tab, Search results, Favorites
- Automatic language switching for tooltips

UI/UX Improvements:
- Hover effects for tooltip elements
- Smooth transitions and visual elevation
- Consistent styling in dark/light modes
- Help cursor for elements with tooltips
- New tooltips feature card in quickstart

Technical Changes:
- Use t('DESC_' + tool.id, language) for descriptions
- HTML title attribute with complete descriptions
- Custom CSS for enhanced tooltip experience
- Automatic update on language change

Documentation:
- Update README with tooltips feature and roadmap v1.2.0
- Add v1.2.0 to CHANGELOG with complete details
- Add tooltips system section in technical_docs.md
- Update quickstart.html to v1.2.0 with new features
- Sync Chrome extension manifest to v1.2

Version: 1.2.0

--- a/quickstart.html
+++ b/quickstart.html
@@ -855,6 +855,7 @@
                         <li>Soporte para inglés</li>
                         <li>Fácil agregar idiomas</li>
                         <li>Cambio al hacer clic</li>
+                        <li>Tooltips bilingües automáticos</li>
                     </ul>
                 </div>
 
@@ -871,6 +872,21 @@
                         <li>Datos guardados localmente</li>
                         <li>Código abierto</li>
                         <li>Totalmente seguro</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+                        </svg>
+                        Tooltips Informativos
+                    </h3>
+                    <ul class="feature-list">
+                        <li>Descripciones completas al hover</li>
+                        <li>Información clara y concisa</li>
+                        <li>Ayuda contextual siempre disponible</li>
+                        <li>Actualización automática con idioma</li>
                     </ul>
                 </div>
             </div>
@@ -1050,7 +1066,7 @@
                 Instalación
             </h2>
 
-            <p>El AEGIS Dashboard es una aplicación web totalmente autónoma. Solo necesitas un navegador moderno.</p>
+            <p>El Aegis Dashboard es una aplicación web totalmente autónoma. Solo necesitas un navegador moderno.</p>
 
             <div class="code-block">
                 <pre><code># Opción 1: Abrir directamente
@@ -1143,7 +1159,7 @@ http://localhost:8000</code></pre>
     <!-- Footer -->
     <footer class="footer">
         <p>
-            🛡️ Aegis Dashboard v1.0 |
+            🛡️ Aegis Dashboard v1.2.0 |
             <span class="badge badge-primary">HTML5</span>
             <span class="badge badge-primary">CSS3</span>
             <span class="badge badge-primary">JavaScript</span>
