feat: replace Downdetector tool with quick access button
Changes:
- Remove Downdetector from tools list (tools-config.js)
- Add Downdetector button in navbar after language toggle
- Button with red/danger color scheme and warning icon
- Icon-only display for compact layout
- Bilingual tooltip (ES/EN) with automatic language switching

Translations:
- Add DOWNDETECTOR_TOOLTIP key in translations.js
- EN: 'Check if websites are down or having issues'
- ES: 'Verifica si los sitios web están caídos o tienen problemas'
- Dynamic tooltip update on language change

UI/UX:
- Red outline button (btn-outline-danger)
- Warning triangle icon
- Positioned between language and history buttons
- Hover effect with gradient and shadow
- Opens in new tab to https://downdetector.cl/
- Accessible with aria-label

Technical:
- Update applyLanguage() to handle Downdetector tooltip
- Remove Downdetector translations from DESC_ keys
- Custom CSS styling for both dark/light modes
- Responsive design maintained"

--- a/index.html
+++ b/index.html
@@ -116,6 +116,18 @@
             <span id="current-lang">ES</span>
           </button>
 
+          <!-- Downdetector Button -->
+          <a href="https://downdetector.cl/" target="_blank" rel="noopener noreferrer" 
+             class="btn btn-outline-danger" 
+             id="downdetector-btn"
+             aria-label="Downdetector">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M12 9v4"></path>
+              <path d="M10.363 3.591l-8.106 13.534a1.914 1.914 0 0 0 1.636 2.871h16.214a1.914 1.914 0 0 0 1.636 -2.87l-8.106 -13.536a1.914 1.914 0 0 0 -3.274 0z"></path>
+              <path d="M12 16h.01"></path>
+            </svg>
+          </a>
+
           <!-- Historial -->
           <button class="btn btn-outline-secondary" onclick="toggleHistoryPanel()" title="Historial de búsquedas">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24"
@@ -202,7 +214,7 @@
             <path d="M12 3v6m0 6v6"></path>
             <path d="M3 12h6m6 0h6"></path>
           </svg>
-          Herramientas
+          Herramientas 
         </button>
         <button class="tab-btn" data-view="favorites" data-i18n="FAVORITES">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24"
