feat: replace Downdetector tool with quick access button (v1.3.0)
Features:
- Remove Downdetector from tools list (76 tools now)
- Add Downdetector quick access button in navbar
- Position between language toggle and history button
- Icon-only design with warning triangle for compact layout
- Red/danger color scheme (#ef4444) for visual prominence
- Direct link to https://downdetector.cl/ opens in new tab

UI/UX Improvements:
- Bilingual tooltip (ES/EN) with automatic language switching
- Hover effect with red gradient and shadow
- Smooth animation (translateY) on hover
- Full dark/light mode support
- Accessible with aria-label attribute
- Responsive design maintained

Translations:
- Add DOWNDETECTOR_TOOLTIP translation key
- EN: 'Check if websites are down or having issues'
- ES: 'Verifica si los sitios web están caídos o tienen problemas'
- Remove DESC_downdetector from translations.js
- Dynamic tooltip update in applyLanguage()

Technical Changes:
- Update tools-config.js: remove downdetector entry
- Update translations.js: add DOWNDETECTOR_TOOLTIP, remove DESC_downdetector
- Update app.js: add tooltip update in applyLanguage()
- Update style.css: custom styles for #downdetector-btn
- Update index.html: add button after language toggle

Documentation:
- Update CHANGELOG.md with v1.3.0 section
- Update README.md: add Quick Access section and roadmap v1.3.0
- Update technical_docs.md: add Quick Access Buttons section with implementation details
- Update quickstart.html: version to v1.3.0, update stats (76 tools, 1 quick access)
- Update Chrome extension manifest.json to v1.3

Optimization:
- Faster access to frequently used function
- Better organization: tools list vs quick access buttons
- Reduced need to search through tools list

Version: 1.3.0"

--- a/quickstart.html
+++ b/quickstart.html
@@ -904,13 +904,18 @@
 
             <div class="stats">
                 <div class="stat-card">
-                    <div class="stat-number">50+</div>
+                    <div class="stat-number">76</div>
                     <div class="stat-label">Herramientas OSINT</div>
                 </div>
 
                 <div class="stat-card">
                     <div class="stat-number">10+</div>
                     <div class="stat-label">Categorías</div>
+                </div>
+
+                <div class="stat-card">
+                    <div class="stat-number">1</div>
+                    <div class="stat-label">Acceso Rápido</div>
                 </div>
 
                 <div class="stat-card">
@@ -1159,7 +1164,7 @@ http://localhost:8000</code></pre>
     <!-- Footer -->
     <footer class="footer">
         <p>
-            🛡️ Aegis Dashboard v1.2.0 |
+            🛡️ Aegis Dashboard v1.3.0 |
             <span class="badge badge-primary">HTML5</span>
             <span class="badge badge-primary">CSS3</span>
             <span class="badge badge-primary">JavaScript</span>
