fix: update OSINT resource count in hero section

--- a/quickstart.html
+++ b/quickstart.html
@@ -714,7 +714,7 @@
     <!-- Hero Section -->
     <div class="hero">
         <h1>🛡️ Aegis Dashboard</h1>
-        <p>Centraliza 77+ recursos OSINT en un solo lugar, detecta automáticamente el tipo de búsqueda y ahorra tiempo valioso en tus investigaciones.</p>
+        <p>Centraliza 78 recursos OSINT en un solo lugar, detecta automáticamente el tipo de búsqueda y ahorra tiempo valioso en tus investigaciones.</p>
         <p style="margin-top: 1rem; font-size: 1.1rem; opacity: 0.9;">📖 Lee la guía de inicio rápido para las funcionalidades</p>
         <a href="index.html" class="btn-primary" style="margin-top: 1.5rem;">Ir a la Herramienta →</a>
     </div>
