--- a/index.html
+++ b/index.html
@@ -445,11 +445,13 @@
                   <option value="THREAT_INTELLIGENCE">Inteligencia de Amenazas</option>
                   <option value="HASH_LOOKUP">Búsqueda de Hash</option>
                   <option value="EMAIL">Email</option>
-                  <option value="FILE_MALWARE_ANALYSIS">Análisis de Archivos y Malware</option>
+                  <option value="MALWARE_ANALYSIS">Análisis de Malware</option>
                   <option value="MALWARE_FEEDS">Fuentes de Malware</option>
-                  <option value="WEBSITE_OSINT_TOOLS">Herramientas OSINT de Sitios Web</option>
-                  <option value="USERNAME_PEOPLE_OSINT">OSINT de Usuarios y Personas</option>
+                  <option value="WEBSITE_SECURITY">Seguridad Web</option>
+                  <option value="PEOPLE_SEARCH">Búsqueda de Personas</option>
+                  <option value="CERTIFICATE_SSL">Certificados SSL</option>
                   <option value="CODE_SEARCH">Búsqueda de Código</option>
+                  <option value="REAL_TIME_THREAT_MAPS">Mapas de Amenazas</option>
                   <option value="OTHERS">Otros</option>
                 </select>
               </div>
