--- a/index.html
+++ b/index.html
@@ -147,6 +147,38 @@
             <span class="badge bg-warning text-dark" id="favorites-count">0</span>
           </button>
 
+          <!-- User Menu -->
+          <div class="dropdown">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon me-1" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <circle cx="12" cy="12" r="10"></circle>
+                <path d="M12 2v20M2 12h20"></path>
+              </svg>
+              <span id="user-display-name">Usuario</span>
+            </button>
+            <div class="dropdown-menu dropdown-menu-end">
+              <div class="dropdown-item disabled">
+                <small class="text-muted" id="user-email">email@example.com</small>
+              </div>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="admin.html" id="admin-link" style="display: none;">
+                <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M12 20h9"></path>
+                  <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+                </svg>
+                Panel Admin
+              </a>
+              <a class="dropdown-item text-danger" href="#" onclick="handleLogout(event)">
+                <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                  <polyline points="16 17 21 12 16 7"></polyline>
+                  <line x1="21" y1="12" x2="9" y2="12"></line>
+                </svg>
+                Cerrar Sesión
+              </a>
+            </div>
+          </div>
+
           <!-- File scan UI removed -->
         </div>
       </div>
@@ -552,6 +584,39 @@
       <path d="M18 15l-6-6-6 6"/>
     </svg>
   </button>
+  
+  <!-- Auth Guard - Verificar autenticación antes de cargar la aplicación -->
+  <script src="js/auth.js"></script>
+  <script>
+    // Verificar autenticación al cargar la página
+    if (!Auth.requireAuth()) {
+      // Si no está autenticado, redirige a login
+      // (requireAuth ya hace la redirección)
+    } else {
+      // Mostrar información del usuario en el navbar
+      document.addEventListener('DOMContentLoaded', function() {
+        const currentUser = Auth.getCurrentUser();
+        if (currentUser) {
+          document.getElementById('user-display-name').textContent = currentUser.name.split(' ')[0];
+          document.getElementById('user-email').textContent = currentUser.email;
+          
+          // Mostrar link de admin si es admin
+          if (currentUser.role === 'admin') {
+            document.getElementById('admin-link').style.display = 'block';
+          }
+        }
+      });
+    }
+    
+    // Función para cerrar sesión
+    function handleLogout(e) {
+      e.preventDefault();
+      if (confirm('¿Estás seguro de que deseas cerrar sesión?')) {
+        Auth.logout();
+      }
+    }
+  </script>
+  
   <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/js/tabler.min.js"></script>
   <script src="js/translations.js"></script>
   <script src="js/tools-config.js"></script>
