Add multilingual support and language toggle functionality to Aegis Dashboard
- Implemented data-i18n attributes for translation keys in quickstart.html
- Added language toggle button to switch between Spanish and English
- Created applyTranslations function to update text content based on selected language
- Stored selected language in localStorage for persistence
- Updated installation instructions and various sections for better localization

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                   <path d="M12 20h9"></path>
                   <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
                 </svg>
-                Panel Admin
+                <span data-i18n="ADMIN_PANEL">Panel Admin</span>
               </a>
               <a class="dropdown-item text-danger" href="#" onclick="handleLogout(event)">
                 <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -174,7 +174,7 @@
                   <polyline points="16 17 21 12 16 7"></polyline>
                   <line x1="21" y1="12" x2="9" y2="12"></line>
                 </svg>
-                Cerrar Sesión
+                <span data-i18n="LOGOUT">Cerrar Sesión</span>
               </a>
             </div>
           </div>
@@ -548,7 +548,7 @@
       <div class="row align-items-center">
         <div class="col-12 text-center">
           <small class="text-muted">
-            🛡️ Aegis Dashboard - Herramienta de Investigación - by s3codecL
+            🛡️ Aegis Dashboard - <span data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</span> - by s3codecL
           </small>
           <div class="social-links mt-2">
             <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer" title="GitHub">
