fix: Correct role badge styling for user in admin panel

--- a/admin.html
+++ b/admin.html
@@ -592,7 +592,7 @@
                 const isSelf = user.id === currentUser.id;
                 const roleBadge = user.role === 'admin' 
                     ? `<span class="badge bg-primary" data-i18n="ROLE_ADMIN">Admin</span>`
-                    : `<span class="badge bg-secondary" data-i18n="ROLE_USER">Usuario</span>`;
+                    : `<span class="badge bg-primary" data-i18n="ROLE_USER">Usuario</span>`;
                 
                 const youText = isSelf ? `<small class="text-muted ms-1" data-i18n="ADMINISTRATOR_YOU">(Tú)</small>` : '';
 
