feat: Add security warnings regarding the handling of private keys and tokens across documentation

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
       <div class="row align-items-center">
         <div class="col-12 text-center">
           <small class="text-muted">
-            🛡️ Aegis Dashboard - <span data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</span> - by s3codecL
+            🛡️ Aegis HUB - <span data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</span> - by s3codecL
           </small>
           <div class="social-links mt-2">
             <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer" title="GitHub">
