--- a/quickstart-new.html
+++ b/quickstart-new.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guía Rápida - Aegis Dashboard</title>
+    <title>Guía Rápida - Aegis HUB</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
@@ -690,7 +690,7 @@
                     </path>
                 </svg>
                 <div class="d-flex flex-column">
-                    <h1 class="mb-0">Aegis Dashboard</h1>
+                    <h1 class="mb-0">Aegis HUB</h1>
                     <small class="text-muted">Herramienta de Investigación</small> 
                 </div>
             </div>
@@ -717,7 +717,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>🛡️ Aegis Dashboard</h1>
+        <h1>🛡️ Aegis HUB</h1>
         <p>Centraliza 78 recursos OSINT en un solo lugar, detecta automáticamente el tipo de búsqueda y ahorra tiempo valioso en tus investigaciones.</p>
         <p style="margin-top: 1rem; font-size: 1.1rem; opacity: 0.9;">📖 Lee la guía de inicio rápido para las funcionalidades</p>
         <a href="index.html" class="btn-primary" style="margin-top: 1.5rem;">Ir a la Herramienta →</a>
@@ -1135,7 +1135,7 @@ http://localhost:8000</code></pre>
 
             <div class="faq-container">
                 <div class="faq-item">
-                    <h4>¿Es seguro usar el AEGIS Dashboard?</h4>
+                    <h4>¿Es seguro usar el AEGIS HUB?</h4>
                     <p>Completamente seguro. No hay servidor backend. Todos los datos se almacenan localmente en tu navegador.</p>
                 </div>
 
@@ -1159,16 +1159,16 @@ http://localhost:8000</code></pre>
         <!-- CTA -->
         <section class="section text-center">
             <p class="cta-subtitle">
-                Accede al Aegis Dashboard y realiza investigaciones profesionales
+                Accede al Aegis HUB y realiza investigaciones profesionales
             </p>
-            <a href="index.html" class="btn-primary">Abrir Dashboard</a>
+            <a href="index.html" class="btn-primary">Abrir HUB</a>
         </section>
     </div>
 
     <!-- Footer -->
     <footer class="footer">
         <p>
-            🛡️ Aegis Dashboard v1.6.0 |
+            🛡️ Aegis HUB v1.6.0 |
             <span class="badge badge-primary">HTML5</span>
             <span class="badge badge-primary">CSS3</span>
             <span class="badge badge-primary">JavaScript</span>
