--- a/quickstart.html
+++ b/quickstart.html
@@ -677,6 +677,9 @@
 </head>
 
 <body>
+        <div class="alert alert-warning" role="alert" style="margin: 1rem auto; max-width: 900px;">
+            <strong>⚠️ Seguridad:</strong> Nunca publiques ni compartas claves privadas, tokens o secretos (como los de Google reCAPTCHA) en la documentación, ejemplos, capturas ni foros públicos.
+        </div>
     <!-- Navbar -->
     <header class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-xl px-3">
